# Pybot

./: .env  .gitignore  GameModeClasses.py  PackageVersionChecker.py  README.md  Splatoon 3.db  main.py  pyproject.toml  requirements.txt
Utils/: Game Stuff.db  errors.py
cogs/: ChoiceSelector.py  FlipACoin.py  HelloThere.py  MK8DBattleMapSelector.py  MK8DMapSelector.py  MessageEncrypt.py  PrivateBattleGameMode.py  Purge.py  SkyblockStuff.py  Splatoon2RandomWeapon.py  VoiceChannel.py  help.py
cogs/General/: ChoiceSelector.py  FlipACoin.py  GameRally.py  HelloThere.py  MessageEncrypt.py  Purge.py  Repeat.py  TwitterStuff.py  VoiceChannel.py  Vote.py  help.py
cogs/Hypixel Skyblock/: SkyblockStuff.py
cogs/Mario Kart/: MK8DBattleMapSelector.py  MK8DMapSelector.py
cogs/Overwatch/: RandomHeroRoll.py
cogs/Splatoon/: PrivateBattleGameMode.py  SplatfestTeamSelector.py  Splatoon2RandomWeapon.py  Splatoon3MapsModes.py  SplatoonRandomWeapon.py
cogs/Splatoon/MapsModesSupport/: GameModeClasses.py  ModesSetup.py
cogs/Splatoon/SplatoonUtils/: GameModeClasses.py  ModesSetup.py  Splatoon 3.db  SplatoonUtils.py
models/: PackageModel.py  SkyblockModels.py  SplatoonModels.py  __init__.py
orm_models/: MK8DXTrackModels.py  OverwatchHeroModels.py  S3KitModels.py  __init__.py
utils/: logger_config.py  sessions.py
