[tool.poetry]
name = "Pybot 3.0"
version = "1.5.0"
description = "A Discord bot written in Python"
authors = ["Penguin Master"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
PyNaCl = "^1.5.0"
"discord.py" = "^1.7.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"